add oauth2_scop api and swagger
